Try using dvh to fix topbar content clipping on mobile

--- a/common/src/styles/_topbar.scss
+++ b/common/src/styles/_topbar.scss
@@ -372,7 +372,7 @@
         .td-topbar-content {
             position: absolute;
             inset: var(--topbar-height) 0 auto 0;
-            height: calc(100vh - 156px);
+            height: calc(100dvh - 156px);
             z-index: 700;
             display: flex;
             flex-direction: column;
